fixing main layout part 1
tabs have proper layout now

--- a/main.html
+++ b/main.html
@@ -8,35 +8,35 @@
 <body>
 <div id="header">
 <img id="vgo_logo" src="assets/logo.png"/>
-<button id="login" type="#"><img id="steam" src="assets/logo_steam.png" />Login</button>
+<button class="login" type="#"><img class="steam" src="assets/logo_steam.png" />Signin with Steam</button>
 </div>
 <div id="root">
 <div id="case_area">
 <div id="case1" class="casebox">
     <h2 id="case_name">Weapon Case 1</h2>
     <img  onclick="location.href='case1.html'" class="case_img"  src="assets/weapon-case-1-300.png">
-    <button id="buybtn" type="#"><img id="key" src="assets/keyp.png" />Buy Case</button>
+    <button id="buybtn" type="#"><img class="key" src="assets/keyp.png" />Buy Case</button>
 </div>
 
 
 <div id="case2" class="casebox">
     <h2 id="case_name">Weapon Case 2</h2>
     <img class="case_img" src="assets/weapon-case-2-300.png">
-    <button id="buybtn" type="#"><img id="key" src="assets/keyp.png" />Buy Case</button>
+    <button id="buybtn" type="#"><img class="key" src="assets/keyp.png" />Buy Case</button>
 </div>
 
 
 <div id="case3" class="casebox">
     <h2 id="case_name">Weapon Case 3</h2>
     <img class="case_img" src="assets/weapon-case-3-300.png">
-    <button id="buybtn" type="#"><img id="key" src="assets/keyp.png" />Buy Case</button>
+    <button id="buybtn" type="#"><img class="key" src="assets/keyp.png" />Buy Case</button>
 </div>
 
 
 <div id="case4" class="casebox">
     <h2 id="case_name">Weapon Case 4</h2>
     <img class="case_img" src="assets/weapon-case-4-300.png">
-    <button id="buybtn" type="#"><img id="key" src="assets/keyp.png" />Buy Case</button>
+    <button id="buybtn" type="#"><img class="key" src="assets/keyp.png" />Buy Case</button>
 </div>
 
 </div>
