--- a/case1.html
+++ b/case1.html
@@ -10,13 +10,9 @@
         </div>
         <div id="root">
             <div class="case_area">    
-				<div id="case_head" >
-                    <img class="case_img" src="assets/weapon-case-1-300.png"/>
-					<div class="case_det">
-						<h1 id="case_name" >WEAPON CASE 1</h1>
-						<h3 id="case_stats" >contains 210 items, ranging from $729.31 - $0.03</h3>
-					</div>
-                </div>
+				<img class="case_img" src="assets/weapon-case-1-300.png";/>
+				<div class="case_name">WEAPON CASE 1</div>
+				<div class="case_fet">contains 210 items, ranging from $729.31 - $0.03</div>
 			</div>
      
 
